css/test.css
a,
a:hover {
  text-decoration: none;
  color: white;
}

.container-hero {
  display: flex;
  justify-content: center;
}

@media only screen and (max-width: 1068px) {
  .container-hero {
    flex-wrap: wrap;
    justify-content: center;
    padding: 0;
    margin: 0;
  }
}

@media only screen and (max-width: 735px) {
  .container-hero {
    flex-wrap: wrap;
    justify-content: center;
    padding: 0;
    margin: 0;
  }
}

.hero-image-frontier,
.hero-image {
  min-width: 50% !important;
  background-position: center !important;
}
.hero-unit-space-frontier .hero-image-frontier {
  width: 1440px;
  height: 980px;
  background-size: 1440px 1010px;
  background-repeat: no-repeat;
  background-image: url(/images/final-frontier_large.jpg);
}

@media only screen and (min-width: 1441px) {
  .hero-unit-moon-exploration .hero-image,
  .hero-unit-space-frontier .hero-image-frontier {
    min-height: 100vh;
  }
}

@media (-webkit-min-device-pixel-ratio: 1.5),
  (min-resolution: 144dpi),
  only screen and (-webkit-min-device-pixel-ratio: 1.5),
  only screen and (min-resolution: 1.5dppx) {
  .hero-unit-space-frontier .hero-image-frontier {
    background-image: url(/images/final-frontier_large_2x.jpg);
  }
}
@media only screen and (max-width: 1068px) {
  .hero-unit-space-frontier .hero-image-frontier {
    width: 1068px;
    height: 712px;
    background-size: 1068px 712px;
    background-repeat: no-repeat;
    background-image: url(/images/final-frontier_medium.jpg);
  }
  .hero-unit-space-frontier .hero-image-frontier,
  .hero-unit-moon-exploration .hero-image {
    background-position: center !important;
  }
}
@media only screen and (max-width: 1068px) and (-webkit-min-device-pixel-ratio: 1.5),
  only screen and (max-width: 1068px) and (min-resolution: 1.5dppx),
  only screen and (max-width: 1068px) and (min-resolution: 144dpi) {
  .hero-unit-space-frontier .hero-image-frontier {
    background-image: url(/images/final-frontier_medium_2x.jpg);
  }
}
@media only screen and (max-width: 735px) {
  .hero-unit-space-frontier .hero-image-frontier {
    width: 735px;
    height: 490px;
    background-size: 735px 490px;
    background-repeat: no-repeat;
    background-image: url(/images/final-frontier_small.jpg);
  }
  .hero-unit-space-frontier .hero-image-frontier,
  .hero-unit-moon-exploration .hero-image {
    background-position: center !important;
  }
}
@media only screen and (max-width: 735px) and (-webkit-min-device-pixel-ratio: 1.5),
  only screen and (max-width: 735px) and (min-resolution: 1.5dppx),
  only screen and (max-width: 735px) and (min-resolution: 144dpi) {
  .hero-unit-space-frontier .hero-image-frontier {
    background-image: url(/images/final-frontier_small_2x.jpg);
  }
}

.hero-copy {
  position: relative !important;
}

/* TIMELINE */

.col-timeline {
  /* display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  max-height: fit-content;
  min-width: 100%;
  gap: 1rem; */

  max-width: 100%;
  display: flex;
  flex-flow: column wrap;
  max-height: 350vh;
  gap: 1rem;
}

.timeline-item {
  max-width: 49%;
  min-width: 27vw;
  height: fit-content;
}

.timeline-1 {
  order: 1;
}
.timeline-2 {
  order: 4;
}
.timeline-3 {
  order: 2;
}
.timeline-4 {
  order: 5;
}
.timeline-5 {
  order: 3;
}
.timeline-6 {
  order: 6;
}

@media only screen and (max-width: 1068px) {
  .col-timeline {
    max-width: 100%;
    display: flex;
    flex-flow: row wrap;
    max-height: fit-content;
  }
  .timeline-item {
    max-width: 100%;
    min-width: 27vw;
    height: fit-content;
  }

  .timeline-1 {
    order: 1;
  }
  .timeline-2 {
    order: 2;
  }
  .timeline-3 {
    order: 3;
  }
  .timeline-4 {
    order: 4;
  }
  .timeline-5 {
    order: 5;
  }
  .timeline-6 {
    order: 6;
  }
}

/* GALLERY NOT GRID SUPPORT */

@supports not (display: grid) {
  .gallery-grid {
    max-width: 100%;
    display: -ms-flexbox;
    display: flex;
    flex-flow: row wrap;
    max-height: 350;
  }

  .gallery-photo {
    position: relative;
    height: 33vw;
    max-height: 789px;
    width: 66.6%;
    overflow: hidden;
  }

  .grid-third {
    width: 33.4%;
  }
  .grid-half {
    width: 50%;
  }

  @media only screen and (max-width: 1068px) {
    .gallery-flex {
      flex-flow: column;
    }
    .gallery-photo {
      width: 100%;
      height: 50vh;
    }
  }

  @media only screen and (max-width: 735px) {
    .gallery-flex {
      border-style: dotted;
      flex-flow: column;
    }
    .gallery-photo {
      width: 100%;
      height: 25vh;
    }
  }
}

